remove script for now

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<script async defer src="http://learnrails-slackin.herokuapp.com/slackin.js"></script>
+<html>
+  <head>
+    <title>Learn Rails</title>
+  </head>
+  <body>
+    Hello World
+    <!-- <script async defer src="http://learnrails-slackin.herokuapp.com/slackin.js"></script> -->
+  </body>
+</html>
