--- a/index.html
+++ b/index.html
@@ -1,9 +1,133 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Learn Rails</title>
-  </head>
-  <body>
-    Hello World
-    <!-- <script async defer src="http://learnrails-slackin.herokuapp.com/slackin.js"></script> -->
-  </body>
+    
+    <head>
+        <title>Learn Rails</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
+        rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="assets/style.css">
+    </head>
+    
+    <body>
+        <div class="cover">
+            <div class="navbar navbar-inverse">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand"></a>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-ex1-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="active">
+                                <a href="#section-slack">Slack</a>
+                            </li>
+                            <li class="active">
+                                <a href="#section-projects">Projects</a>
+                            </li>
+                            <li class="active">
+                                <a href="#section-resources">Resources</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="background-image-fixed cover-image" style="background-image : url('assets/bg.jpg')"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1 class="text-inverse">
+                            <b>Learn Rails</b>
+                        </h1>
+                        <p class="text-inverse">A community focused on learning and discussing Ruby on Rails</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section" id="section-slack">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 class="text-center">Slack</h1>
+                        <p class="text-center">Request an invite to our community</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section" id="section-projects">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 class="text-center">Projects</h1>
+                        <p class="text-center">We've built some things.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="#"><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
+                        <h3 class="text-center">Redditgraphed</h3>
+                        <p class="text-center">Project Description Here</p>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#"><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
+                        <h3 class="text-center">Stationstream</h3>
+                        <p class="text-center">Project Description Here</p>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#"><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
+                        <h3 class="text-center">Upcoming Project</h3>
+                        <p class="text-center">Project Description Here</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section" id="section-resources">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 class="text-center">Rails Resources</h1>
+                        <p class="text-center">Other places to go to learn Ruby on Rails.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-group">
+                            <li class="list-group-item">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+
 </html>
