update font, add img-responsive class

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                     </div>
                 </div>
             </div>
-            <div class="background-image-fixed cover-image" style="background-image : url('assets/bg.jpg')"></div>
+            <div class="background-image-fixed cover-image img-responsive" style="background-image : url('assets/bg.jpg')"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h1 class="text-inverse">
                             <b>Learn Rails</b>
                         </h1>
-                        <p class="text-inverse">A community focused on learning and discussing Ruby on Rails</p>
+                        <p class="text-inverse">
+                            <b>A community focused on learning and discussing Ruby on Rails</b>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -117,13 +119,13 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <ul class="list-group">
-                            <li class="list-group-item">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
-                        </ul>
+                        <div class="lead list-group">
+                            <a href="#" class="list-group-item">Cras justo odio</a>
+                            <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                            <a href="#" class="list-group-item">Morbi leo risus</a>
+                            <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                            <a href="#" class="list-group-item">Vestibulum at eros</a>
+                        </div>
                     </div>
                 </div>
             </div>
