--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     </div>
                 </div>
             </div>
-            <div class="background-image-fixed cover-image img-responsive" style="background-image : url('assets/bg.jpg')"></div>
+            <div class="background-image-fixed cover-image img-responsive center-block"
+            style="background-image : url('assets/bg.jpg')"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
