add slack button and links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+
     <head>
         <title>Learn Rails</title>
         <meta charset="utf-8">
@@ -11,7 +11,7 @@
         rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="assets/style.css">
     </head>
-    
+
     <body>
         <div class="cover">
             <div class="navbar navbar-inverse">
@@ -48,7 +48,7 @@
                         <h1 class="text-inverse">
                             <b>Learn Rails</b>
                         </h1>
-                        <p class="text-inverse">
+                        <p class="lead text-inverse">
                             <b>A community focused on learning and discussing Ruby on Rails</b>
                         </p>
                     </div>
@@ -60,13 +60,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center">Slack</h1>
-                        <p class="text-center">Request an invite to our community</p>
+                        <p class="lead text-center">Request an invite to our community</p>
+                        <p class="text-center"><script async defer src="https://learnrails-slackin.herokuapp.com/slackin.js?large"></script></p>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="section">
-            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <hr>
@@ -79,7 +76,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center">Projects</h1>
-                        <p class="text-center">We've built some things.</p>
+                        <p class="lead text-center">We've built some things.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -99,10 +96,6 @@
                         <p class="text-center">Project Description Here</p>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="section">
-            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <hr>
@@ -115,17 +108,18 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center">Rails Resources</h1>
-                        <p class="text-center">Other places to go to learn Ruby on Rails.</p>
+                        <p class="lead text-center">Other places to go to learn Ruby on Rails.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="lead list-group">
-                            <a href="#" class="list-group-item">Cras justo odio</a>
-                            <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-                            <a href="#" class="list-group-item">Morbi leo risus</a>
-                            <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                            <a href="#" class="list-group-item">Vestibulum at eros</a>
+                            <a href="https://www.railstutorial.org" class="list-group-item">Ruby on Rails Tutorial by Michael Hartl</a>
+                            <a href="http://railscasts.com" class="list-group-item">RailsCasts - Ruby on Rails Screencasts</a>
+                            <a href="http://www.codecademy.com" class="list-group-item">Codecademy</a>
+                            <a href="http://www.reddit.com/r/rails/" class="list-group-item">Reddit - /r/rails</a>
+                            <a href="https://www.codeschool.com" class="list-group-item">Code School</a>
+                            <a href="https://teamtreehouse.com" class="list-group-item">Treehouse</a>
                         </div>
                     </div>
                 </div>
