add forgotten thumbnail class

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+
     <head>
         <title>Learn Rails</title>
         <meta charset="utf-8">
@@ -11,7 +11,7 @@
         rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="assets/style.css">
     </head>
-    
+
     <body>
         <div class="cover">
             <div class="navbar navbar-inverse">
@@ -93,7 +93,7 @@
                         <p class="text-center">Real-time tracking of the ISS</p>
                     </div>
                     <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
+                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive img-thumbnail"></a>
                         <h3 class="text-center">Upcoming Project</h3>
                         <p class="text-center">Help us make something great!</p>
                     </div>
