--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Learn Rails</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
         rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="assets/style.css">
     </head>
@@ -62,7 +62,7 @@
                         <h1 class="text-center">Slack</h1>
                         <p class="lead text-center">Request an invite to our community.</p>
                         <p class="text-center">
-                            <script async="" defer="" src="https://learnrails-slackin.herokuapp.com/slackin.js?large"></script>
+                            <script async="" defer="" src="//learnrails-slackin.herokuapp.com/slackin.js?large"></script>
                         </p>
                     </div>
                 </div>
@@ -88,12 +88,12 @@
                         <p class="text-center">Analysis of Reddit posts</p>
                     </div>
                     <div class="col-md-4">
-                        <a href="http://stationstream.space"><img src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
-                        <h3 class="text-center">Stationstream</h3>
+                        <a href="https://stationstream.space"><img src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
+                        <h3 class="text-center">StationStream</h3>
                         <p class="text-center">Real-time tracking of the ISS</p>
                     </div>
                     <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive img-thumbnail"></a>
+                        <a><img src="//pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive img-thumbnail"></a>
                         <h3 class="text-center">Upcoming Project</h3>
                         <p class="text-center">Help us make something great!</p>
                     </div>
@@ -158,5 +158,4 @@
               });
         </script>
     </body>
-
 </html>
