--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <a href="http://redditgraphed.com"><img src="assets/redditgraphed.png" class="img-responsive img-thumbnail"></a>
+                        <a href="http://redditgraphed.com"><img alt="A Picture of the Redditgraphed Web Site" src="assets/redditgraphed.png" class="img-responsive img-thumbnail"></a>
                         <h3 class="text-center">Redditgraphed</h3>
                         <p class="text-center">Analysis of Reddit posts</p>
                     </div>
                     <div class="col-md-4">
-                        <a href="https://stationstream.space"><img src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
+                        <a href="https://stationstream.space"><img alt="A Picture of the StationStream Web Site" src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
                         <h3 class="text-center">StationStream</h3>
                         <p class="text-center">Real-time tracking of the ISS</p>
                     </div>
                     <div class="col-md-4">
-                        <a><img src="//pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive img-thumbnail"></a>
+                        <a><img alt="A Placeholder Image" src="//pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive img-thumbnail"></a>
                         <h3 class="text-center">Upcoming Project</h3>
                         <p class="text-center">Help us make something great!</p>
                     </div>
