add link to CoC, open links in new tab

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <p class="text-center">
                             <script async="" defer="" src="//learnrails-slackin.herokuapp.com/slackin.js?large"></script>
                         </p>
+                        <h4 class="text-center">Please take a moment and read through our <a href="https://github.com/learn-rails/LearnRails-Code-Of-Conduct" target="_blank">Code of Conduct</a>.</h4>
                     </div>
                 </div>
                 <div class="row">
@@ -83,12 +84,12 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <a href="http://redditgraphed.com"><img alt="A Picture of the Redditgraphed Web Site" src="assets/redditgraphed.png" class="img-responsive img-thumbnail"></a>
+                        <a href="http://redditgraphed.com" target="_blank"><img alt="A Picture of the Redditgraphed Web Site" src="assets/redditgraphed.png" class="img-responsive img-thumbnail"></a>
                         <h3 class="text-center">Redditgraphed</h3>
                         <p class="text-center">Analysis of Reddit posts</p>
                     </div>
                     <div class="col-md-4">
-                        <a href="https://stationstream.space"><img alt="A Picture of the StationStream Web Site" src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
+                        <a href="https://stationstream.space" target="_blank"><img alt="A Picture of the StationStream Web Site" src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
                         <h3 class="text-center">StationStream</h3>
                         <p class="text-center">Real-time tracking of the ISS</p>
                     </div>
@@ -116,12 +117,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="lead list-group">
-                            <a href="https://www.railstutorial.org" class="list-group-item">Ruby on Rails Tutorial by Michael Hartl</a>
-                            <a href="http://railscasts.com" class="list-group-item">RailsCasts - Ruby on Rails Screencasts</a>
-                            <a href="http://www.codecademy.com" class="list-group-item">Codecademy</a>
-                            <a href="http://www.reddit.com/r/rails/" class="list-group-item">Reddit - /r/rails</a>
-                            <a href="https://www.codeschool.com" class="list-group-item">Code School</a>
-                            <a href="https://teamtreehouse.com" class="list-group-item">Treehouse</a>
+                            <a href="https://www.railstutorial.org" target="_blank" class="list-group-item">Ruby on Rails Tutorial by Michael Hartl</a>
+                            <a href="http://railscasts.com" target="_blank" class="list-group-item">RailsCasts - Ruby on Rails Screencasts</a>
+                            <a href="http://www.codecademy.com" target="_blank" class="list-group-item">Codecademy</a>
+                            <a href="http://www.reddit.com/r/rails/" target="_blank" class="list-group-item">Reddit - /r/rails</a>
+                            <a href="https://www.codeschool.com" target="_blank" class="list-group-item">Code School</a>
+                            <a href="https://teamtreehouse.com" target="_blank" class="list-group-item">Treehouse</a>
                         </div>
                     </div>
                 </div>
