rebrand to Web Development from Rails

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Learn Rails</title>
+        <title>Learn Web Development</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -46,10 +46,10 @@
                 <div class="row">
                     <div class="col-md-12 text-center" id="hero">
                         <h1 class="text-inverse">
-                            <b>Learn Rails</b>
+                            <b>Learn Web Development</b>
                         </h1>
                         <p class="lead text-inverse">
-                            <b>A community focused on learning and discussing Ruby on Rails</b>
+                            <b>A community focused on learning and discussing web development</b>
                         </p>
                     </div>
                 </div>
@@ -110,8 +110,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="text-center">Rails Resources</h1>
-                        <p class="lead text-center">Other places to go to learn Ruby on Rails.</p>
+                        <h1 class="text-center">Resources</h1>
+                        <p class="lead text-center">Other places to go to learn web development.</p>
                     </div>
                 </div>
                 <div class="row">
