--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                         <h1 class="text-center">Slack</h1>
                         <p class="lead text-center">Request an invite to our community.</p>
                         <p class="text-center">
-                            <script async="" defer="" src="//learnrails-slackin.herokuapp.com/slackin.js?large"></script>
+                            <script async="" defer="" src="//learnwebdev-slackin.herokuapp.com/slackin.js?large"></script>
                         </p>
-                        <h4 class="text-center">Please take a moment and read through our <a href="https://github.com/learn-rails/LearnRails-Code-Of-Conduct" target="_blank">Code of Conduct</a>.</h4>
+                        <h4 class="text-center">Please take a moment and read through our <a href="https://github.com/learnwebdev/LearnWebDev-Code-Of-Conduct" target="_blank">Code of Conduct</a>.</h4>
                     </div>
                 </div>
                 <div class="row">
