--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+    
     <head>
         <title>Learn Web Development</title>
         <meta charset="utf-8">
@@ -10,8 +10,9 @@
         <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
         rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="assets/style.css">
+        <link href="assets/icon.png" rel="icon" type="image">
     </head>
-
+    
     <body>
         <div class="cover">
             <div class="navbar navbar-inverse">
@@ -64,7 +65,9 @@
                         <p class="text-center">
                             <script async="" defer="" src="//learnwebdev-slackin.herokuapp.com/slackin.js?large"></script>
                         </p>
-                        <h4 class="text-center">Please take a moment and read through our <a href="https://github.com/learnwebdev/LearnWebDev-Code-Of-Conduct" target="_blank">Code of Conduct</a>.</h4>
+                        <h4 class="text-center">Please take a moment and read through our
+                            <a href="https://github.com/learnwebdev/LearnWebDev-Code-Of-Conduct"
+                            target="_blank">Code of Conduct</a>.</h4>
                     </div>
                 </div>
                 <div class="row">
@@ -159,4 +162,5 @@
               });
         </script>
     </body>
+
 </html>
