--- a/pages/slack.html
+++ b/pages/slack.html
@@ -4,7 +4,7 @@
       <h1 class="text-center">Slack</h1>
       <p class="lead text-center">Request an invite to our community.</p>
       <p class="text-center">
-        <script async="" defer="" src="//learnwebdev-slackin.herokuapp.com/slackin.js?large"></script>
+        <script async="" defer="" src="https://learnwebdev-slackin.herokuapp.com/slackin.js?large"></script>
       </p>
       <h4 class="text-center">Please take a moment and read through our
         <a href="https://github.com/learnwebdev/LearnWebDev-Code-Of-Conduct" target="_blank">Code of Conduct</a>.
