get onclick attached properly, still no scroll

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -12,13 +12,13 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="active">
-          <a href="#section-slack">Slack</a>
+          <a href="#section-slack" onclick="scrollme()">Slack</a>
         </li>
         <li class="active">
-          <a href="#section-projects">Projects</a>
+          <a href="#section-projects" onclick="scrollme()">Projects</a>
         </li>
         <li class="active">
-          <a href="#section-resources">Resources</a>
+          <a href="#section-resources" onclick="scrollme()">Resources</a>
         </li>
       </ul>
     </div>
