--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -28,10 +28,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center" id="hero">
-      <h1 class="text-inverse">
+      <h2 class="text-inverse">
         <b>&lt;slash/rocket&gt;</b>
-      </h1>
-      <p class="lead text-inverse">
+      </h2>
+      <p class="text-inverse">
         <b>A community focused on learning and discussing web development</b>
       </p>
     </div>
